fixed btn on mobile

--- a/css/queries.scss
+++ b/css/queries.scss
@@ -220,7 +220,9 @@ below 550px/16 = 43em
 		.btn,
 		.btn:link,
 		.btn:visited {
-			padding: 2.4rem 1.6rem;
+			padding: 2rem 1rem;
+			width: 60%;
+			margin-top: 2rem;
 		}
 		.hero-img {
 			width: 80%;
